<resources>
    <string name="app_name">AppNameHere</string>
    <string name="activity_in_vehicle">In Vehicle</string>
    <string name="activity_on_bicycle">On Bicycle</string>
    <string name="activity_on_foot">On Foot</string>
    <string name="activity_still">Still</string>
    <string name="activity_tilting">Tilting</string>
    <string name="activity_walking">walking</string>
    <string name="activity_unknown">Unknown</string>
    <string name="defaults">Defaults</string>
    <string name="running">RUNNING</string>
    <string name="walking">WALKING</string>
    <string name="bicycle">Bicycle</string>
    <string name="driving">Driving</string>
    <string name="sitting">Sitting</string>
    <string name="album_art">Album Art</string>
    <string name="now_playing">Now Playing:</string>
    <string name="song_name">Song name</string>
    <string name="around_the_world_harder_better_faster_stronger">Around the World / Harder Better Faster Stronger</string>
    <string name="artist_name">Artist name</string>
    <string name="daft_punk">Daft Punk</string>
    <string name="play_pause_button">Play/Pause Button</string>
    <string name="go_back_buton">go back buton</string>
    <string name="skipbutton">skipbutton</string>
    <string name="color_options">Color Options:</string>
    <string name="connect_to_spotify">Connect to Spotify:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light_mode">Light Mode</string>
    <string name="red_green_colorblind">Red-Green Colorblind</string>
    <string name="blue_yellow_colorblind">Blue-Yellow Colorblind</string>
    <string name="monochrome">Monochrome</string>
    <string name="current_user_aman_singh">Current User: Aman Singh</string>
    <string name="spotify_logo">spotify logo</string>
    <string name="in_vehicle">IN VEHICLE</string>
    <string name="cycling">CYCLING</string>
    <string name="person_running">person running</string>
    <string name="person_sitting">person sitting</string>
    <string name="person_walking">person walking</string>
    <string name="vehicles">vehicles</string>
    <string name="person_cycling">person cycling</string>
    <string name="still">STILL</string>
    <string name="shuffle">shuffle</string>
    <string name="chromecast">chromecast</string>
    <string name="tabs">tabs</string>
    <string name="viewpage">page view</string>
</resources>